# alpha-zero-cpp

./: .gitignore  LICENSE  README.md  config.yaml  optimize.py  params.py  plot.py  requirements.txt  run_az.py  test.py  train.py  utils.py
cc/: CMakeLists.txt  Dependencies.cmake  game_info.cc  generate.cc  play_agaisnt.cc  play_agaisnt_agree.cc  selfplay.cc
cc/games/: CMakeLists.txt  ConnectFour.cc  ConnectFour.h  Game.cc  Game.h  Tictactoe.cc  Tictactoe.h  pybind.cc
cc/mcts/: CMakeLists.txt  GameState.cc  GameState.h  MCTS.cc  MCTS.h
cc/nn/: CMakeLists.txt  NNObserver.cc  NNObserver.h  NNUtils.h  NNWrapper.cc  NNWrapper.h  utils.h
cc/player/: CMakeLists.txt  Player.cc  Player.h
cc/src/: CMakeLists.txt  MCTS.cc  NNWrapper.cc  NNWrapper.h  Player.cc  Player.h  play_agaisnt.cc  selfplay.cc  test  utils.cc  utils.h
cc/src/games/: CMakeLists.txt  Game.h  Tictactoe.cc  Tictactoe.h
cc/tests/: CMakeLists.txt  mcts.cc
py/: AlphaZeroTrainer.py  GameSampler.py  MCTS.py  NN.py  Player.py
py/games/: Game.py  Tictactoe.py
py/utils/: plot.py
src/: AlphaZeroTrainer.py  MCTS.cc  MCTS_virtual_loss.py  NN.py  a.out  xtensor-dev_0.10.11-1_all.deb
src/games/: Tictactoe.cc  Tictactoe.h  Tictactoe.py  a.out
